# FlappyBirdOpenGL

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: bird.frag  default.vert  scrolling.frag
include/: bird.h  game.h  pipe.h  render.h  shader.h  sprite.h  texture.h  window.h
src/: bird.c  game.c  main.c  pipe.c  render.c  shader.c  sprite.c  texture.c  window.c
